<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_gravity="center">
    
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/card"
        app:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fName"
                android:hint="@string/first_name"
                android:textAlignment="center"
                android:layout_margin="5dp"
                />

            <EditText
                android:id="@+id/lName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/fName"
                android:hint="@string/last_name"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <EditText
                android:id="@+id/spec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/lName"
                android:hint="@string/spec"
                android:textAlignment="center"
                android:layout_margin="5dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addbtn"
                android:text="@string/add"
                android:layout_below="@id/switch1"
                android:layout_margin="5dp"
                />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/spec"
                android:layout_centerHorizontal="true"
                android:layout_margin="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/attestation" />


        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>